# mostargate

./: .gitignore  Makefile  README.md  generate_dataset.sh  pyproject.toml
.claude/: CLAUDE.md
dataset/: company_policy.txt  dataset.json  disagreements.json  test.json  train.json  validation_results.json  validation_sample.json
dataset/classifier_artifacts/: claude_haiku_scores.json  roberta_test_probs.npy
dataset/metrics/: metrics_post_review.json  metrics_pre_review.json
docs/: c2_action_plan.md  dataset-findings.md  dynamic_scoping_icml.bib  dynamic_scoping_icml.tex  mostargate-paper.md  notes.md  phase_b_baseline_findings.md  phase_c_classifier_findings.md  policy-refinement.md
docs/paper/: dynamic_scoping_icml.bib  dynamic_scoping_icml.tex
mostargate/: constants.py
mostargate/classifier/: baselines.py  data.py  sweep.py  train.py
mostargate/dataset_generator/: label_generator.py  merge.py  metrics.py  request_generator.py  split.py  stats.py  validate.py  validate_human.py
mostargate/experiments/: metrics.py  run.py  types.py
mostargate/experiments/conditions/: c0.py  c1.py
notebooks/: colab_train.ipynb  dataset_analysis.ipynb  dataset_analysis_executed.ipynb
results/: c0.json  c1.json  classifier_baselines.json  roberta_large_sweep.json  tfidf_threshold_sweep.json
