[project]
name = "mostargate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.87.0",
    "dotenv>=0.9.9",
    "torch>=2.11.0",
    "matplotlib>=3.7.0",
    "jupyter>=1.1.1",
    "transformers>=5.9.0",
    "scikit-learn>=1.7.2",
    "datasets>=4.8.5",
    "numpy>=2.2.6",
    "sentencepiece>=0.2.1",
    "protobuf>=7.35.0",
]
